--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -29,15 +29,20 @@ jobs:
         uses: actions/upload-artifact@v6
         with:
           name: dist-files
-          #path: dist
-          path: |
-            dist
-            package.json
+          path: dist
+          # path: |
+          #   dist
+          #   package.json
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
     steps:
-
+      - name: Download artifact
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: List artifacts
+        run: ls
       - name: Deploy
         run: echo "Deploying..."
