--- a/.github/workflows/demo.yml
+++ b/.github/workflows/demo.yml
@@ -50,6 +50,6 @@ jobs:
       - name: List artifacts
         run: ls
       - name: Output Filename
-        run: echo ${{ needs.build.ouputs.script-file }}
+        run: echo ${{ needs.build.outputs.script-file }}
       - name: Deploy
         run: echo "Deploying..."
